showing logs on prod for debug purpose.

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
   <app-root></app-root>
 
   <script>
-    if(window.document.domain.indexOf('herokuapp') != -1){
-      // hidding all console logs in production
-      window.console.log = window.console.error = window.console.debug = function(){
+    // if(window.document.domain.indexOf('herokuapp') != -1){
+    //   // hidding all console logs in production
+    //   window.console.log = window.console.error = window.console.debug = function(){
 
-      }
-    }
+    //   }
+    // }
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
